--- a/hakkimda.html
+++ b/hakkimda.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="profile-info">
                     <h2>Sude Ağırtaş</h2>
-                    <p class="subtitle">Bilgisayar Mühendisliği Öğrencisi & Ordu Sevdalısı</p>
+                    <p class="subtitle">Bilgisayar Mühendisliği Öğrencisi</p>
                 </div>
             </div>
 
