--- a/iletisim.html
+++ b/iletisim.html
@@ -48,7 +48,7 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h3>E-posta</h3>
-                            <p>ornek@email.com</p>
+                            <p>25120205007@ismu.edu.tr</p>
                         </div>
                     </div>
 
@@ -65,15 +65,6 @@
                         <div class="contact-details">
                             <h3>Konum</h3>
                             <p>Ordu, Türkiye</p>
-                        </div>
-                    </div>
-
-                    <div class="social-links">
-                        <h3>Sosyal Medya</h3>
-                        <div class="social-icons">
-                            <a href="#" class="social-link">Instagram</a>
-                            <a href="#" class="social-link">Twitter</a>
-                            <a href="#" class="social-link">LinkedIn</a>
                         </div>
                     </div>
                 </div>
