homepage music added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <audio id="backgroundMusic" volume="0.5">
+        <source src="assets/ordunun-dereleri.mp3" type="audio/mpeg">
+    </audio>
+
     <nav class="navbar">
         <div class="nav-container">
             <h1 class="logo">
